errors.txt
   Compiling rust v0.1.0 (/Users/dylanwallace/rust-raytracer-quest)
warning: unused imports: `DynamicImage`, `GenericImage`
 --> src/frame/objects/assets/primitives/color.rs:4:13
  |
4 | use image::{DynamicImage, GenericImage, Pixel, Rgba};
  |             ^^^^^^^^^^^^  ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `self::frame::frame::Frame`
 --> src/main.rs:3:5
  |
3 | use self::frame::frame::Frame;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `self::frame::objects::element::Element`
 --> src/main.rs:4:5
  |
4 | use self::frame::objects::element::Element;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `self::frame::objects::assets::light::Light`
 --> src/main.rs:5:5
  |
5 | use self::frame::objects::assets::light::Light;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `self::frame::objects::assets::plane::Plane`
 --> src/main.rs:6:5
  |
6 | use self::frame::objects::assets::plane::Plane;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `self::frame::objects::assets::sphere::Sphere`
 --> src/main.rs:7:5
  |
7 | use self::frame::objects::assets::sphere::Sphere;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused imports: `DynamicImage`, `GenericImage`, `Pixel`, `Rgba`
  --> src/main.rs:10:13
   |
10 | use image::{DynamicImage, GenericImage, Pixel, Rgba};
   |             ^^^^^^^^^^^^  ^^^^^^^^^^^^  ^^^^^  ^^^^

error[E0599]: no method named `sub` found for type `f64` in the current scope
  --> src/frame/objects/assets/plane.rs:16:29
   |
16 |             let v = self.p0.sub(&ray.origin);
   |                             ^^^ method not found in `f64`
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the following trait is implemented but not in scope, perhaps add a `use` for it:
           `use std::ops::Sub;`

error[E0609]: no field `center` on type `&frame::objects::assets::plane::Plane`
  --> src/frame/objects/assets/plane.rs:25:28
   |
25 |         hit_point.sub(self.center).unit()
   |                            ^^^^^^

error[E0609]: no field `fov` on type `&frame::frame::Frame`
  --> src/frame/frame.rs:25:36
   |
25 |         let fov_adjustment = (self.fov.to_radians() / 2.0).tan();
   |                                    ^^^

error[E0308]: mismatched types
  --> src/frame/frame.rs:41:48
   |
41 |         let mut image = DynamicImage::new_rgb8(self.width, self.height);
   |                                                ^^^^^^^^^^ expected u32, found f64

error[E0308]: mismatched types
  --> src/frame/frame.rs:41:60
   |
41 |         let mut image = DynamicImage::new_rgb8(self.width, self.height);
   |                                                            ^^^^^^^^^^^ expected u32, found f64

error[E0308]: mismatched types
  --> src/frame/frame.rs:43:21
   |
43 |         for x in 0..self.width {
   |                     ^^^^^^^^^^ expected integer, found f64
   |
   = note: expected type `{integer}`
              found type `f64`

error[E0308]: mismatched types
  --> src/frame/frame.rs:44:25
   |
44 |             for y in 0..self.height {
   |                         ^^^^^^^^^^^ expected integer, found f64
   |
   = note: expected type `{integer}`
              found type `f64`

error[E0616]: field `distance` of struct `frame::objects::intersection::Intersection` is private
  --> src/frame/frame.rs:62:58
   |
62 |         let hit_point = ray.origin.add(ray.direction.mul(intersection.distance));
   |                                                          ^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> src/frame/frame.rs:62:40
   |
62 |         let hit_point = ray.origin.add(ray.direction.mul(intersection.distance));
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                        |
   |                                        expected reference, found struct `frame::objects::assets::primitives::vector::Vector`
   |                                        help: consider borrowing here: `&ray.direction.mul(intersection.distance)`
   |
   = note: expected type `&frame::objects::assets::primitives::vector::Vector`
              found type `frame::objects::assets::primitives::vector::Vector`

error[E0616]: field `element` of struct `frame::objects::intersection::Intersection` is private
  --> src/frame/frame.rs:63:30
   |
63 |         let surface_normal = intersection.element.surface_normal(&hit_point);
   |                              ^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `surface_normal` found for type `&frame::objects::element::Element` in the current scope
  --> src/frame/frame.rs:63:51
   |
63 |         let surface_normal = intersection.element.surface_normal(&hit_point);
   |                                                   ^^^^^^^^^^^^^^ method not found in `&frame::objects::element::Element`
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the following trait is implemented but not in scope, perhaps add a `use` for it:
           `use crate::frame::objects::assets::intersect::Intersect;`

error[E0599]: no function or associated item named `new` found for type `frame::objects::assets::primitives::color::Color` in the current scope
  --> src/frame/frame.rs:64:32
   |
64 |         let mut color = Color::new(1.0 as f32, 1.0 as f32, 1.0 as f32);
   |                                ^^^ function or associated item not found in `frame::objects::assets::primitives::color::Color`
   | 
  ::: src/frame/objects/assets/primitives/color.rs:7:1
   |
7  | pub struct Color {
   | ---------------- function or associated item `new` not found for this
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `new`, perhaps you need to implement it:
           candidate #1: `jpeg_decoder::worker::Worker`

error[E0616]: field `element` of struct `frame::objects::intersection::Intersection` is private
  --> src/frame/frame.rs:69:39
   |
69 |                 let light_reflected = intersection.element.albedo() / std::f32::consts::PI;
   |                                       ^^^^^^^^^^^^^^^^^^^^

error[E0599]: no method named `albedo` found for type `&frame::objects::element::Element` in the current scope
  --> src/frame/frame.rs:69:60
   |
69 |                 let light_reflected = intersection.element.albedo() / std::f32::consts::PI;
   |                                                            ^^^^^^ method not found in `&frame::objects::element::Element`
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the following trait is implemented but not in scope, perhaps add a `use` for it:
           `use crate::frame::objects::assets::intersect::Intersect;`

error[E0616]: field `element` of struct `frame::objects::intersection::Intersection` is private
  --> src/frame/frame.rs:70:29
   |
70 |                 let color = intersection.element.color.mul_c(&light.color).mul_s(light_power).mul_s(light_reflected);
   |                             ^^^^^^^^^^^^^^^^^^^^

error[E0609]: no field `color` on type `&frame::objects::element::Element`
  --> src/frame/frame.rs:70:50
   |
70 |                 let color = intersection.element.color.mul_c(&light.color).mul_s(light_power).mul_s(light_reflected);
   |                                                  ^^^^^

error[E0599]: no method named `intersect` found for type `&frame::objects::element::Element` in the current scope
  --> src/frame/frame.rs:80:31
   |
80 |             .filter_map(|s| s.intersect(ray).map(|d| Intersection::new(d, s)))
   |                               ^^^^^^^^^ method not found in `&frame::objects::element::Element`
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the following trait is implemented but not in scope, perhaps add a `use` for it:
           `use crate::frame::objects::assets::intersect::Intersect;`

error[E0609]: no field `distance` on type `&_`
  --> src/frame/frame.rs:81:33
   |
81 |             .min_by(|i1, i2| i1.distance.partial_cmp(&i2.distance).unwrap())
   |                                 ^^^^^^^^

error: aborting due to 18 previous errors

Some errors have detailed explanations: E0308, E0599, E0609, E0616.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `rust`.

To learn more, run the command again with --verbose.
